Переписать на классическое web-приложение